--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,35 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 node_modules
 .pnp
 .pnp.js
 
-# testing
+# Local env files
+.env
+.env*.local
+
+# Testing
 coverage
 
-# next.js
+# Turbo
+.turbo
+
+# Vercel
+.vercel
+
+# Build Outputs
 .next/
 out/
 build
+dist
 
-# misc
-.DS_Store
-*.pem
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# turbo
-.turbo
-
-# vercel
-.vercel
+# Misc
+.DS_Store
+*.pem
