--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -4,8 +4,8 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "styles/globals.css",
+    "config": "tailwind.config.ts",
+    "css": "src/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
