chore: update components export path

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,6 +29,6 @@
     "./postcss.config": "./postcss.config.js",
     "./tailwind.config": "./tailwind.config.ts",
     "./lib/*": "./src/lib/*.ts",
-    "./components/*": "./src/components/ui/*.tsx"
+    "./components/*": "./src/components/*.tsx"
   }
 }
